<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="ru.bezsveta.ibuzzpromo.R" />
        <import type="androidx.core.content.ContextCompat" />
        <variable
            name="code"
            type="String" />
        <variable
            name="lightStatus"
            type="boolean" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/logo" />


        <LinearLayout
            android:gravity="center|top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/reg_title"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:layout_marginTop="3dp"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:text="@string/on_site"/>
            <TextView
                android:id="@+id/link_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/site_link"
                android:textSize="16sp"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_marginLeft="4dp"
                />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/bind_title"
                android:layout_marginTop="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/code_title"
                android:layout_marginTop="3dp"/>

            <TextView
                android:id="@+id/code_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="3dp"
                android:text="@{code}"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/copy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingRight="16dp"
                android:background="@color/green_light"
                android:textStyle="normal"
                android:text="@string/copy_code_title"
                android:layout_marginTop="3dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/status_title"/>

                <TextView
                    android:id="@+id/light_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@{lightStatus ? ContextCompat.getColor(context,R.color.green) : ContextCompat.getColor(context,R.color.red)}"
                    android:text="@{lightStatus ? context.resources.getString(R.string.has_light_status) : context.resources.getString(R.string.no_light_status)}"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/faq_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/faq_link"
                    android:textSize="10sp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:layout_marginTop="3dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/slash"
                    android:layout_margin="8dp"
                    android:textSize="10sp"
                    android:layout_marginTop="3dp"/>

                <TextView
                    android:id="@+id/about_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/about_link"
                    android:textSize="10sp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:layout_marginTop="3dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/contacts_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/contacts_link"
                android:textSize="10sp"
                android:textColor="@android:color/holo_blue_dark" />

        </LinearLayout>
    </LinearLayout>
</layout>